--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ p {
     background: var(--red);
     padding: 50px;
     height: 100vh;
+    width: 100vw;
     background-image: url(./images/bg-intro-desktop.png);
 }
 
