--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,8 @@ form{
     width:100%;
     text-align: right;
     padding: 0; 
-    margin-top: -10px;  
+    margin-top: -10px;
+    font-style: italic; 
 }
 
 input {
